--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,12 @@
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
+    "paths": {
+      "ng-heroicons": [
+        "dist/ng-heroicons/ng-heroicons",
+        "dist/ng-heroicons"
+      ]
+    },
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
