--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ngcc --properties es5 browser module main --first-only"
   },
   "private": true,
   "dependencies": {
@@ -25,11 +26,23 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.4",
+    "@angular-eslint/builder": "^2.0.1",
+    "@angular-eslint/eslint-plugin": "^2.0.1",
+    "@angular-eslint/eslint-plugin-template": "^2.0.1",
+    "@angular-eslint/template-parser": "^2.0.1",
     "@angular/cli": "~11.2.4",
     "@angular/compiler-cli": "~11.2.5",
     "@types/jasmine": "~3.6.6",
     "@types/node": "^14.14.34",
+    "@typescript-eslint/eslint-plugin": "^4.17.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^4.17.0",
+    "@typescript-eslint/parser": "^4.17.0",
     "codelyzer": "^6.0.1",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsdoc": "^32.2.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~6.0.0",
     "karma": "~6.2.0",
