--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
-  "name": "angular-component",
+  "name": "@dimaslz/angular-library",
+  "author": "Dimas López <me@dimaslz.io> (dimaslz)",
+  "repository": {
+    "url": "git+https://github.com/dimaslz/angular-library.git",
+    "type": "git"
+  },
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "postinstall": "ngcc --properties es5 browser module main --first-only"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
@@ -33,6 +39,7 @@
     "@angular/cli": "~11.2.4",
     "@angular/compiler-cli": "~11.2.5",
     "@types/jasmine": "~3.6.6",
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.34",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/eslint-plugin-tslint": "^4.17.0",
@@ -45,6 +52,8 @@
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~6.0.0",
+    "jest": "^26.6.3",
+    "jest-preset-angular": "^8.4.0",
     "karma": "~6.2.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
